--- a/SignIn.html
+++ b/SignIn.html
@@ -11,9 +11,9 @@
   <body>
     <section class="sign-in-page flex">
       <img src="./images/signIn/bg.png" alt="" />
-      <div class="page-logo flex">
+      <a href="/index.html" class="page-logo flex">
         <img src="./images/logo-website.svg" alt="" />
-      </div>
+      </a>
       <form>
         <div class="input-box">
           <input type="email" placeholder="Email hoặc số điện thoại" />
@@ -31,7 +31,7 @@
           <a href="#">Quên mật khẩu</a>
         </div>
         <input type="submit" value="Đăng nhập" class="button" />
-        <p>Bạn muốn tạo tài khoản? <a href="./SignUp.html">Đăng ký</a></p>
+        <p>Bạn muốn tạo tài khoản? <a href="#">Đăng ký</a></p>
         <span>Or</span>
         <div class="social flex">
           <img src="./images/signIn/face.svg" alt="" />
@@ -44,5 +44,6 @@
         <a target="_blank" href="https://vgasoft.vn/">VGA SOFT</a>
       </p>
     </section>
+    <script src="./index.js"></script>
   </body>
 </html>
