--- a/index.html
+++ b/index.html
@@ -10,28 +10,36 @@
   </head>
   <body>
     <header class="padding flex">
-      <div class="header-logo flex">
+      <a href="./index.html" class="header-logo flex">
         <img src="./images/logo-website.svg" alt="" />
-      </div>
-      <a href="#" class="user-res">
-        <img src="./images/home/user-res.svg" alt="" />
       </a>
+      <div class="user-res">
+        <img src="./images/home/user-res.svg" alt="" />
+        <img
+          src="./images/home/nav-icon.svg"
+          alt=""
+          onclick="toggleNav()"
+          class="nav-icon"
+        />
+      </div>
       <ul class="navigation flex">
+        <div class="close-nav"></div>
         <li><a href="./index.html" class="active">Trang chủ</a></li>
         <li><a href="./Utilities.html">Tính năng</a></li>
         <li><a href="./PriceList.html">Bảng giá</a></li>
         <li><a href="./Article.html">Tin tức</a></li>
         <li><a href="./Contact.html">Liên hệ</a></li>
         <li class="flex">
-          <!-- <div class="user flex">
+          <div class="user flex">
             <img src="./images/home/user-res.svg" alt="" />
             <p>Nguyễn</p>
-          </div> -->
+          </div>
+          <a href="/login" class="button active"> Trang quản trị </a>
+          <!-- <a href="./SignIn.html">Đăng nhập</a>
+          <a href="#dang-ky" class="button">Đăng ký ngay</a> -->
           <a href="./SignIn.html" class="sign-out">
-            <img src="./images/home/sign-out.svg" alt="" />
+            <img src="./images/home/sign-in.svg" alt="" />
           </a>
-          <a href="./SignIn.html">Đăng nhập</a>
-          <a href="#dang-ky" class="button">Đăng ký ngay</a>
         </li>
       </ul>
     </header>
@@ -88,6 +96,7 @@
         <img src="./images/home/utility-2.png" alt="" />
       </div>
       <div class="content">
+        <p class="title-type-2 res">Tính năng</p>
         <ul class="utilities-list">
           <li class="flex">
             <img
@@ -124,6 +133,8 @@
     </section>
 
     <section class="price-list padding flex">
+      <img src="./images/home/bg-left.png" alt="" />
+      <img src="./images/home/bg-right.png" alt="" />
       <div class="content">
         <p class="title-type-1">BẢNG GIÁ</p>
         <p class="title-type-2">MỨC GIÁ HỢP LÝ, QUẢN LÝ DỄ DÀNG</p>
@@ -264,6 +275,7 @@
           </div>
         </div>
       </div>
+      <a href="#" class="button res">Đăng ký ngay</a>
     </section>
 
     <section class="evaluate-home padding flex">
@@ -374,6 +386,7 @@
           </p>
         </div>
       </div>
+      <a href="./Article.html">Xem thêm...</a>
     </section>
 
     <footer class="padding flex" id="dang-ky">
@@ -407,7 +420,7 @@
         <div class="footer-logo flex">
           <img src="./images/logo-website.svg" alt="" />
         </div>
-        <div class="sign-up-footer">
+        <div class="sign-up-footer-2">
           <p>Đăng ký để nhận được tin tức mới nhất</p>
           <form class="flex">
             <input type="text" placeholder="Email*" />
@@ -508,5 +521,6 @@
         <p>MST: 0108140789 do sở KH đầu tư Hà Nội cấp ngày 22/1/2018</p>
       </div>
     </footer>
+    <script src="./index.js"></script>
   </body>
 </html>
